# solid

./: .coveragerc  .env.dev  .env.test  .flake8  LICENSE  dev.docker-compose.yml  pyproject.toml  pytest.ini
authentication/: admin.py  base.py  forms.py  models.py
authentication/migrations/: 0001_initial.py
authentication/tests/: test_base.py  test_models.py
contrib/: __init__.py  hash.py  validators.py
contrib/tests/: test_hash.py  test_validators.py
core/: settings.py
core/settings/: base.py  dev.py  prod.py  test.py
docker/compose/: dev.docker-compose.yml  test.docker-compose.yml
objects/: apps.py  models.py
scripts/: compose.sh  lint.sh  run.sh
storage/: admin.py  apps.py  models.py  tasks.py
storage/migrations/: 0001_initial.py  0002_file_deleted_at_file_is_deleted_folder_deleted_at_and_more.py
storage/tests/: test_models.py  test_tasks.py
