[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
django = "^6.0"
boto3 = "^1.42.5"
django-storages = "^1.14.6"
psycopg = {extras = ["binary"], version = "^3.3.2"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.12.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]
