[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
django = "^6.0"
boto3 = "^1.42.5"
django-storages = "^1.14.6"
psycopg = {extras = ["binary"], version = "^3.3.2"}
pillow = "^12.0.0"
django-tasks = "^0.10.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.12.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]
test = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-django (>=4.11.1,<5.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "faker (>=38.2.0,<39.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
